Another possible fix for image sizing on mobile

--- a/public/about.css
+++ b/public/about.css
@@ -136,13 +136,17 @@ footer p a {
 
 figure {
 	margin: 0 auto;
+	align-self: center;
 	width: 100%;
 	max-width: 361px;
-	align-self: center;
+	height: auto;
 }
 
 figure img {
 	border: 1px solid grey;
+	width: 100%;
+	max-width: 361px;
+	height: auto;
 }
 
 figcaption {
